--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,15 +1,16 @@
-version 0.21-Repunit-edition (2016-04-03)
+version 0.21-Repunit-edition (2016-05-25)
 - contributors: Danilo Nitsche (danilo.nitsche@gmx.de)
   - Removed Barrett and 72 bit kernels
   - Removed Wagstaff related stuff
   - Added 64 bit kernels
   - Implemented repunit factorization (hardcoded)
-  - Improved performance compared to older version (0.18-repunit)
+  - Improved performance compared to older version (0.18-repunit) about 30%
 - Notes
-  - Compiling with more-classes flag seem to be slightly faster, but ETA does not work properly
+  - Compiling with more-classes flag seem to be slightly faster, thus it is switched on
   - Not tested on Windows yet
   - GPU sieving utilizes 100% of the GPU, so 1 mfaktc instance is enough
   - GPU sieving makes the system response slow (tested on Ubuntu 14.04 64 bit with Geforce 460 GTS)
+      Setting GPUSieveSize in mfaktc.ini to 8 or lower makes the system more responsive
 
 version 0.21 (2015-02-17)
 - contributors
