Add some documentation

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,11 @@
+version 0.21-generalized-repunit-edition (2016-05-25)
+- contributors: Danilo Nitsche (danilo.nitsche@gmx.de)
+  - implemented factoring of generalized repunits
+    - default is base 10
+    - allowed are all bases >= 2 (program might crash if base is larger than roughly 100,000)
+    - implemented special cases for bases 2, 3, 5, 6, 7, 8, 10, 11, 12
+    - dropped lower limit for exponents from 100,000 to 50,000
+
 version 0.21-Repunit-edition (2016-05-25)
 - contributors: Danilo Nitsche (danilo.nitsche@gmx.de)
   - Removed Barrett and 72 bit kernels
