--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,6 +1,11 @@
-version 0.21-generalized-repunit-edition (2020-05-05)
+version 0.21-generalized-repunit-edition (2020-09-20)
 - contributors: Fan Ming, Danilo Nitsche (danilo.nitsche@gmx.de)
   - fixed issue on Geforce 1660 cards
+  - implemented test for negative bases
+  - implemented lookup tables for possible remainders of any base with abs(base) <= 1000
+    - unfortunately not every base supports the lookup table due to the current CUDA k-block implementation
+    - only bases which satisfy lcm(remainder_mod, NUM_CLASSES) == 2 * NUM_CLASSES are possible
+  - more test cases for general repunits (provided by Paul Bourdelais)
 
 version 0.21-generalized-repunit-edition (2019-10-31)
 - contributors: Danilo Nitsche (danilo.nitsche@gmx.de)
