--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,6 +2,7 @@ version 0.21.2 generalized-repunit-edition (2024-04-28)
 - contributors: Danilo Nitsche (danilo.nitsche@gmx.de)
   - -st and -st2 can pass optional file to allow testing on any file
   - doubled the allowed range of bases from 32 to 33 bit (-4294967295 to 4294967295)
+  - read default base from mfaktc.ini (to avoid specifying base in worktodo.txt)
 
 version 0.21.1 generalized-repunit-edition (2024-04-23)
 - contributors: Danilo Nitsche (danilo.nitsche@gmx.de)
